# dawn-common

./: .gitignore  .project  pom.xml
org.dawb.common.gpu/: .project
org.dawb.common.python/: .project  buckminster.cspex  build.properties
org.dawb.common.python.test/: .project
org.dawb.common.services/: .project  build.properties
org.dawb.common.ui/: .classpath  .project  build.properties  plugin.xml
org.dawb.common.ui/OSGI-INF/: eventTracker.xml  fileLoaderService.xml  galleryDelegate.xml  imageAlignment.xml  persistence.xml  systemServiceComponent.xml
org.dawb.common.ui/cheat/: project-new.xml
org.dawb.common.ui/schema/: editorExtension.exsd  hardwareClass.exsd  plottingClass.exsd  toolPage.exsd  valueProviderPage.exsd
org.dawb.common.ui/xcf/: Project-data.xcf
org.dawb.common.util/: .project  .pydevproject  buckminster.cspex
org.dawb.common.util.test/: .project
org.dawb.gda.extensions/: .project  plugin.xml
org.dawb.gda.extensions/intro/: introContribution.xml  style.css
org.dawb.gda.extensions/xcf/: unknown.xcf
org.dawb.hd5.feature/: .project  feature.xml
org.dawb.hdf5/: .classpath  .project  .pydevproject  build.properties
org.dawb.hdf5.editor/: .project  plugin.xml
org.dawb.hdf5.test/: .project  .pydevproject  JUnit-org.dawb.hdf5.test.launch
org.dawb.hdf5/src/ncsa/hdf/view/: CMakeLists.txt  Chart.java  DataOptionDialog.java  DataView.java  DefaultFileFilter.java  DefaultImageView.java  DefaultMetaDataView.java  DefaultPaletteView.java  DefaultTableView.java  DefaultTextView.java  DefaultTreeView.java  FileConversionDialog.java  HDFView.java  HelpView.java  ImageView.java  Makefile.in  MathConversionDialog.java  MetaDataView.java  NewAttrHelp.html  NewAttributeDialog.java  NewDatasetDialog.java  NewDatasetHelp.html  NewDatatypeDialog.java  NewFileDialog.java  NewGroupDialog.java  NewImageDialog.java  NewLinkDialog.java  NewTableDataDialog.java  PaletteView.java  TableView.java  TextView.java  Tools.java  TreeView.java  UserOptionsDialog.java  ViewManager.java  ViewProperties.java
org.dawb.jlchart/: .classpath  .project  build.properties
org.dawb.jmol/: .classpath  .project  build.properties
org.dawb.pydev.extensions/: .project  build.properties  plugin.xml
org.dawb.workbench.examples/: .project  build.properties
org.dawb.workbench.examples/data/: spec_scans.spec
org.dawb.workbench.examples/python/: filter_example.py  gda-script.py  plot.py  python_script1.py  python_script2.py  python_script3.py  python_script4.py  python_script5.py
org.dawb.workbench.examples/workflows/: command_example.moml  directory_packing_example.moml  filter_example.moml  folder_example.moml  folder_monitor_example.moml  gda_scan_example.moml  if_example.moml  loop_example.moml  maths_example.moml  maths_example2.moml  maths_example3.moml  motor_example.moml  plot_fit_example.moml  plot_image_region_example.moml  python_numjy_example1.moml  python_numpy_example1.moml  python_pydev_numpy_example1.moml  spec_scan_example.moml  (+1 more)
org.dawb.workbench.examples/workflows-edna/: edna_characterisation.moml  edna_image_indexing.moml  edna_thumbnail.moml
org.dawb.workbench.examples/workflows-icat/: icat_connection.moml  icat_generic_actor.moml  icat_visits_list.moml
org.dawnsci.boofcv/: .classpath  .project  .pydevproject  buckminster.cspex  build.properties  component.ext
org.dawnsci.boofcv.examples/: .project
org.dawnsci.boofcv.test/: .project  JUnit-org.dawnsci.boofcv.test.launch  build.properties  pom.xml  releng.ant
org.dawnsci.common.services.feature/: .project  feature.xml
org.dawnsci.common.ui.feature/: .project  feature.xml
org.dawnsci.conversion/: .classpath  .project  buckminster.cspex  build.properties  component.ext  plugin.xml
org.dawnsci.conversion.feature/: .project  feature.xml
org.dawnsci.conversion.test/: .classpath  .project  AVIImageConvertTest.launch  JUnit-org.dawnsci.conversion.test.launch  build-plugin.xml  releng.ant
org.dawnsci.conversion.ui/: .classpath  .project  build.properties  plugin.xml
org.dawnsci.doe/: .project
org.dawnsci.io/: .project  buckminster.cspex  component.ext  plugin.xml
org.dawnsci.io.test/: .project  build.properties  releng.ant
org.dawnsci.jexl/: .project  buckminster.cspex  component.ext
org.dawnsci.jexl.test/: .project  releng.ant
org.dawnsci.jgoogleanalytics/: .project  buckminster.cspex  component.ext  plugin.xml
org.dawnsci.jgoogleanalytics.test/: .project
org.dawnsci.jre.linux.aarch64.feature/: .project  build.properties  feature.xml  pom.xml
org.dawnsci.jre.linux.x86_64.feature/: .project  build.properties  feature.xml  pom.xml
org.dawnsci.jre.macos.aarch64.feature/: .project  build.properties  feature.xml  pom.xml
org.dawnsci.jre.macos.x86_64.feature/: .project  build.properties  feature.xml  pom.xml
org.dawnsci.jre.win32.x86_64.feature/: .project  build.properties  feature.xml  pom.xml
org.dawnsci.macro/: .project  buckminster.cspex  build.properties  plugin.xml
org.dawnsci.macro.feature/: .project  feature.xml
org.dawnsci.macro.test/: .project
org.dawnsci.nexus/: .project  buckminster.cspex  build.properties
org.dawnsci.nexus.ispyb/: .project
org.dawnsci.nexus.ispyb.application/: .project  org.dawnsci.nexus.ispyb.application.application.launch  plugin.xml
org.dawnsci.nexus.ispyb.test/: .project
org.dawnsci.nexus.test/: .gitignore  .project  JUnit-org.dawnsci.nexus.test.launch  releng.ant
org.dawnsci.persistence/: .classpath  .project  buckminster.cspex  build.properties  component.ext
org.dawnsci.persistence.feature/: .project  feature.xml
org.dawnsci.persistence.test/: .classpath  .project  JUnit-org.dawnsci.persistence.test.launch  build-plugin.xml  build.properties  releng.ant
org.dawnsci.processing.docgenerator/: .project  ProcessingDocumentationGenerator.launch  plugin.xml
org.dawnsci.processing.python/: .project  plugin.xml
org.dawnsci.python.rpc/: .project  buckminster.cspex  plugin.xml
org.dawnsci.python.rpc.test/: .project  pom.xml  releng.ant
org.dawnsci.thirdparty.xml.feature/: .project  feature.xml
(+1168 files in other folders)
